[package]
name = "eventsapis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.96"
time = { version="0.3.21", features=["formatting", "parsing"] }
tokio = { version="1.28.2", features=["macros", "rt-multi-thread"] }
tokio-postgres = { version="0.7.8", features=["with-serde_json-1"] }
tonic = "0.9"
prost = "0.11"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.18"
prost-types = "0.11.9"
anystruct = "0.1.0"
env_logger = "0.10.0"
tokio-stream = "0.1.14"
clap = { version="4.3.2", features=["derive"] }
eventsapis_proto = { path = "../eventsapis-proto" }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
